# docs-rag-chat

./: README.md  juejin-docs-rag-chat.md
Backend/: .env.example  .gitignore  pyproject.toml  run_backend.bat  测试文件.txt
Backend/app/: __init__.py
Backend/app/http/: __init__.py  app.py  module.py
Backend/config/: __init__.py  config.py  default_config.py
Backend/docs/: PRD-本地文档RAG问答系统.md  RAG接口实现完成报告.md  今日功能更新-2026-03-11.md
Backend/internal/core/: __init__.py
Backend/internal/exception/: __init__.py  exception.py
Backend/internal/extension/: __init__.py  database_extension.py  migrate_extension.py
Backend/internal/handler/: __init__.py  app_handler.py  rag_handler.py
Backend/internal/model/: __init__.py  app.py
Backend/internal/router/: __init__.py  router.py
Backend/internal/schema/: __init__.py  app_schema.py  rag_schema.py
Backend/internal/server/: __init__.py  http.py
Backend/internal/service/: __init__.py  app_service.py  chat_service.py  document_loader.py  document_splitter.py  rag_service.py  summary_buffer_memory.py  vector_store.py
Backend/pkg/response/: __init__.py  http_code.py  response.py
Backend/pkg/sqlalchemy/: __init__.py  sqlalchemy.py
Backend/study/: 1.2.2-mindmap.md  1.2.2.md  总文档.md  总框架.md
Backend/study/1-Prompt组件及使用技巧/: 1.Prompt组件基础用法.py  2.字符串提示拼接.py  3.消息提示模板拼接.py  4.复用提示模板.py  test.py  学习笔记.md
Backend/study/10 缓冲/: 3.py  test.py  学习笔记.md  (+1 more)
Backend/templates/: rag.html
Backend/test/: __init__.py  conftest.py  debug_test.py  manual_test.py  test_rag_api.py
Backend/vector-store/: index.faiss  index.pkl
(+158 files in other folders)
